--- a/src/components/accordion.css
+++ b/src/components/accordion.css
@@ -31,7 +31,8 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
   font-size: 14px;
-  margin: auto;
+  text-align: left;
+  margin: auto auto auto 1em;
 
 }
 
